--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
+      <title>Redirector to TedCreator.vercel.app/</title>
       <meta http-equiv = "refresh" content = "1; url = https://tedcreator.vercel.app/" />
    </head>
    <body>
