--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>Redirector to TedCreator.vercel.app/</title>
       <meta http-equiv = "refresh" content = "1; url = https://tedcreator.vercel.app/" />
    </head>
-   <body>
-      <p>Redirecting to https://tedcreator.vercel.app/</p>
+   <body styles="text-align: center;">
+      <p styles="font-size: 50px;">Redirecting to <a href="https://tedcreator.vercel.app">TedCreator.vercel.app</a></p>
    </body>
 </html>
