--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
    <head>
       <title>Redirector to TedCreator.vercel.app/</title>
-      <meta http-equiv = "refresh" content = "1; url = https://tedcreator.vercel.app/" />
+      <meta http-equiv = "refresh" content = "0; url = https://tedcreator.vercel.app/" />
    </head>
-   <body styles="text-align: center;">
-      <p styles="font-size: 50px;">Redirecting to <a href="https://tedcreator.vercel.app">TedCreator.vercel.app</a></p>
+   <body style="text-align: center; font-size: 50px;"">
+      <p>Redirecting to <a href="https://tedcreator.vercel.app">TedCreator.vercel.app</a></p>
    </body>
 </html>
